# airtable_backend

./: Cargo.toml
src/: main.rs
src/api/: table_api.rs
src/model/: table_model.rs
