[package]
name = "surrealdb-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
surrealdb = "1.0.0-beta.8"
thiserror = "1"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }